--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -26,6 +26,9 @@ table{
 tr:nth-child(even){
 	background-color: #f2f2f2;
 }
+.hiddenData{
+	text-align: center;
+}
 .loadwifi{
 	text-align: center;
 }
